Fix title too close to top on mobile

--- a/public/css/themes/disgusting.css
+++ b/public/css/themes/disgusting.css
@@ -23,9 +23,19 @@ body {
   font-family: 'Comic Sans MS', cursive, sans-serif !important;
 }
 
+#title {
+  padding-top: 0;
+}
+
 #subtitle,
 #volumeLabel,
 .dropbtn,
 .dropdown-content button {
   font-style: italic;
+}
+
+@media (orientation: portrait) {
+  #title {
+    padding-top: .25em;
+  }
 }
